tests/rosetta/transpiler/Zig/canonicalize-cidr.error
zig build error: exit status 1
/tmp/TestMochiZigGoldencanonicalize-cidr1381817618/001/prog.zig:128:8: error: expected 'while', 'for', 'inline', or '{', found 'an identifier'
